src/objects/FieloCH__Challenge__c.object
<CustomObject>
    <customHelpPage>FieloCH__ChallengeHelpBackend</customHelpPage>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CountryCode__c</fullName>
        <formula>F_PRM_Country__r.CountryCode__c</formula>
        <label>Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ExternalProgramName__c</fullName>
        <label>External Program Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_ChallengeFilter__c</fullName>
        <externalId>true</externalId>
        <label>Challenge Filter</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_CountryCodeInjectQuery__c</fullName>
        <formula>IF(F_PRM_Country__r.CountryCode__c=&apos;WW&apos;  || F_PRM_Country__r.F_PRM_IsRegion__c=TRUE,
&quot;&quot;, 
F_PRM_Country__r.CountryCode__c)</formula>
        <label>Country Code (Inject Query)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>F_PRM_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country</label>
        <referenceTo>PRMCountry__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_MenuOverview__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Menu describing the Program/Challenge accessible to the partner from &quot;Recommended programs&quot;</description>
        <inlineHelpText>If selected, the eligible partner programs/challenges will be displayed on the My Program/My Recommended Program page.</inlineHelpText>
        <label>&quot;Recommended Program&quot; Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Challenges (Menu Overview)</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_MenuProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Menu describing the Program/Challenge accessible to the partner from &quot;My programs&quot;</description>
        <inlineHelpText>If selected, the eligible partner programs/challenges will be displayed on the My Program/My Recommended Program page.</inlineHelpText>
        <label>&quot;My Program&quot; Menu</label>
        <referenceTo>FieloEE__Menu__c</referenceTo>
        <relationshipLabel>Challenges (Menu Program)</relationshipLabel>
        <relationshipName>Challenges1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>F_PRM_NumberOfLevels__c</fullName>
        <label>Number of Levels</label>
        <summaryFilterItems>
            <field>FieloCH__ChallengeReward__c.F_TypeReward__c</field>
            <operation>equals</operation>
            <value>Level</value>
        </summaryFilterItems>
        <summaryForeignKey>FieloCH__ChallengeReward__c.FieloCH__Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>F_PRM_ProgramCode__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Program code</label>
        <length>9</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>F_PRM_Program_Description_content_feed__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Content feed to give a quick overview of the program - will be  displayed on the My Program/My Recommended Program page.</description>
        <inlineHelpText>Content feed to give a quick overview of the program - will be  displayed on the My Program/My Recommended Program page.</inlineHelpText>
        <label>Program Description content feed</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Selected content feed must be a &quot;Program Description&quot; (Record Type)</errorMessage>
            <filterItems>
                <field>FieloEE__News__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Program Description</value>
            </filterItems>
            <infoMessage>Selected content feed must be a &quot;Program Description&quot; (Record Type)</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>FieloEE__News__c</referenceTo>
        <relationshipLabel>Related Challenge</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__AcomplishAction__c</fullName>
        <label>Accomplish Action</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__CompetitionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Finish</fullName>
                </value>
                <value>
                    <fullName>Repeat</fullName>
                </value>
                <value>
                    <fullName>Continue</fullName>
                    <default>true</default>
                    <label>Continue</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__AttachmentId__c</fullName>
        <description>The Id of the attach record</description>
        <label>PictureId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Default</fullName>
                    <default>true</default>
                    <label>Default</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Challenge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the &quot;father&quot; on a series.</description>
        <label>Challenge</label>
        <referenceTo>FieloCH__Challenge__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__CompetitionType__c</fullName>
        <description>If Challenge is competition type, Defines if is by performance, by time or by objective that completes challenge</description>
        <inlineHelpText>-Objective:  Each member that accomplishes the challenge wins
-Time: Its a race time, wins the first member that completes the challenge
-Performance: It’s a competition by value, the member with best performance  wins challenge</inlineHelpText>
        <label>Competition Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Objective</fullName>
                    <default>true</default>
                    <label>Objective</label>
                </value>
                <value>
                    <fullName>Performance</fullName>
                </value>
                <value>
                    <fullName>Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__DaysLeft__c</fullName>
        <formula>FieloCH__FinalDate__c -  TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Left</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>FieloCH__FinalDate__c</fullName>
        <description>Day until the challenge is valid</description>
        <label>Final Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__InitialDate__c</fullName>
        <description>Day since the challenge is valid</description>
        <label>Initial Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__InjectBadgeIds__c</fullName>
        <label>Inject BadgeIds</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloCH__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__MissionsCounter__c</fullName>
        <label>Mission Counter</label>
        <summaryForeignKey>FieloCH__MissionChallenge__c.FieloCH__Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloCH__Mode__c</fullName>
        <description>The mode define if the missions are  a competition between members or a collaborative mission between all the challenge community.</description>
        <inlineHelpText>Select Competition if you want to create a challenge to each member or Collaborative if you want to create a single mission that will be accomplish by the hole challenge community.</inlineHelpText>
        <label>Mode</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competition</fullName>
                    <default>true</default>
                    <label>Competition</label>
                </value>
                <value>
                    <fullName>Teams</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Objects__c</fullName>
        <label>Objects</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FieloEE__Event__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__Transaction__c</fullName>
                </value>
                <value>
                    <fullName>FieloEE__BadgeMember__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Picture__c</fullName>
        <formula>IF( NOT( ISBLANK(FieloCH__AttachmentId__c) ), IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;+FieloCH__AttachmentId__c, Name, 60, 60),  Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Picture</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceAutoSubscribe__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Copy subscription list from previous</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceDayOfMonth__c</fullName>
        <label>RecurrenceDayOfMonth</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceInstance__c</fullName>
        <label>RecurrenceInstance</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                    <default>true</default>
                    <label>1st</label>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
                <value>
                    <fullName>4th</fullName>
                </value>
                <value>
                    <fullName>last</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceInterval__c</fullName>
        <label>Recurrence Interval</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloCH__RecurrenceType__c</fullName>
        <label>RecurrenceType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RecursDaily</fullName>
                </value>
                <value>
                    <fullName>RecursEveryWeekday</fullName>
                </value>
                <value>
                    <fullName>RecursWeekly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthly</fullName>
                </value>
                <value>
                    <fullName>RecursMonthlyNth</fullName>
                </value>
                <value>
                    <fullName>RecursYearly</fullName>
                </value>
                <value>
                    <fullName>RecursYearlyNth</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Repeatable__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checks if the members can participate again although it has won the challenge.</inlineHelpText>
        <label>Repeatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__RewardCounter__c</fullName>
        <label>Reward Counter</label>
        <summaryForeignKey>FieloCH__ChallengeReward__c.FieloCH__Challenge__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>FieloCH__Status__c</fullName>
        <formula>IF(  ! FieloCH__IsActive__c, &quot;Inactive&quot;,
  IF ( FieloCH__FinalDate__c &lt; TODAY() || (ISPICKVAL(FieloCH__CompetitionType__c,&apos;Performance&apos;) &amp;&amp; FieloCH__Processed__c)
            || (ISPICKVAL(FieloCH__Mode__c,&apos;Collaborative&apos;) &amp;&amp; FieloCH__Processed__c), &quot;Finished&quot;,
    IF (FieloCH__InitialDate__c &lt;= TODAY() &amp;&amp; FieloCH__FinalDate__c &gt;= TODAY() , &quot;Active&quot;, &quot;Future&quot; ) ) )</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeAutomatically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Subscribe Automatically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeFrom__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__SubscribeTo__c</fullName>
        <label>To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FieloCH__Subscription__c</fullName>
        <inlineHelpText>- Open: By subscription, any member can subscribe. 
- Closed: Without subscription, Administrator subscribes the members</inlineHelpText>
        <label>Subscription Mode</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__Mode__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Global</fullName>
                    <default>true</default>
                    <label>Global</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__TableType__c</fullName>
        <label>Position Table Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>FieloCH__CompetitionType__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Position Ranking</fullName>
                </value>
                <value>
                    <fullName>Value Ranking</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FieloCH__Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>If is mark as not visible the members of challenge do not know that are in the challenge until win.</inlineHelpText>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onFriday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Friday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onMonday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Monday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onSaturday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Saturday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onSunday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sunday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onThursday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Thursday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onTuesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Tuesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FieloCH__onWednesday__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Wednesday</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GroupAccountChallenge__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable only for Challenges with Mode = Teams</inlineHelpText>
        <label>Group Account Challenge</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsChallengeAutoEnrollmented__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Applicable only for Challenges with Mode = Teams</inlineHelpText>
        <label>Challenge Enabled for Auto Enrollment?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PartnerProgCountries__c</fullName>
        <label>Partner Prog Countries</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PartnerProgramCountries__c</fullName>
        <label>Partner Program Countries</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Partner Program</label>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Challenges</relationshipLabel>
        <relationshipName>Challenges</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingDescription__c</fullName>
        <description>Small description of last publication</description>
        <inlineHelpText>Small description of last publication</inlineHelpText>
        <label>PublishingDescription</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PublishingGoldenId__c</fullName>
        <description>Track the source Id</description>
        <inlineHelpText>Track the source Id</inlineHelpText>
        <label>PublishingGoldenId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingIsUpdated__c</fullName>
        <description>Identify if the record has been updated</description>
        <formula>IF( OR(LastModifiedDate  &gt; PublishingTimestamp__c,ISBLANK(PublishingTimestamp__c)),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify if the record has been updated</inlineHelpText>
        <label>PublishingIsUpdated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PublishingOdasevaId__c</fullName>
        <externalId>true</externalId>
        <label>PublishingOdasevaId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingPublisher__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Track who was the last publisher</description>
        <inlineHelpText>Track who was the last publisher</inlineHelpText>
        <label>PublishingPublisher</label>
        <referenceTo>User</referenceTo>
        <relationshipName>PublisherFieloCHChallengec</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PublishingStatusImage__c</fullName>
        <description>Identify at first sight that the record is set for publication</description>
        <formula>CASE(TEXT(PublishingStatus__c),&quot;Ready for Publication&quot;,IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Ready for Publication&quot;),&quot;Awaiting Publication&quot;,IMAGE(&quot;/img/samples/flag_yellow.gif&quot;,&quot;Awaiting Publication&quot;),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Identify at first sight that the record is set for publication</inlineHelpText>
        <label>PublishingStatusImage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PublishingStatus__c</fullName>
        <label>PublishingStatus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ready for Publication</fullName>
                </value>
                <value>
                    <fullName>Awaiting Publication</fullName>
                </value>
                <value>
                    <fullName>Published</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PublishingTimestamp__c</fullName>
        <description>Date and time of the last publication</description>
        <inlineHelpText>Date and time of the last publication</inlineHelpText>
        <label>PublishingTimestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TECH_MigrationUniqueID__c</fullName>
        <description>Unique ID to be used by ODASEVA for synchronizing the records between environments</description>
        <externalId>true</externalId>
        <label>Migration Unique ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TransferLocatorProgramName__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transfer Program Name to Locator</label>
        <type>Checkbox</type>
    </fields>
    <label>Challenge</label>
    <listViews>
        <fullName>All_Team_Challenges</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloCH__Mode__c</field>
            <operation>equals</operation>
            <value>Teams</value>
        </filters>
        <label>All Team Challenges</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Alliance_Challenges</fullName>
        <columns>FieloCH__IsActive__c</columns>
        <columns>NAME</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>PartnerProgram__c</columns>
        <columns>F_PRM_MenuProgram__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__AcomplishAction__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>FieloCH__InitialDate__c</columns>
        <columns>FieloCH__Subscription__c</columns>
        <columns>FieloCH__Category__c</columns>
        <columns>F_PRM_ChallengeFilter__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>FieloCH__Challenge__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Alliance</value>
        </filters>
        <label>Alliance Challenges</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FieloCH__Active_Challenges</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__Challenge__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>FieloCH__Subscription__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>FieloCH__SubscribeFrom__c</columns>
        <columns>FieloCH__MissionsCounter__c</columns>
        <columns>FieloCH__Status__c</columns>
        <columns>FieloCH__Program__c</columns>
        <columns>F_PRM_Country__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>FieloCH__IsActive__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Challenges</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>FieloCH__All</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__Program__c</columns>
        <columns>F_PRM_ProgramCode__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>FieloCH__InitialDate__c</columns>
        <columns>FieloCH__FinalDate__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>F_PRM_ChallengeFilter__c</columns>
        <columns>F_PRM_MenuOverview__c</columns>
        <columns>F_PRM_MenuProgram__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>PartnerProgramCountries__c</columns>
        <columns>PartnerProgCountries__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Challenges</fullName>
        <columns>NAME</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__AcomplishAction__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>FieloCH__InitialDate__c</columns>
        <columns>FieloCH__Subscription__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CountryCode__c</field>
            <operation>equals</operation>
            <value>US</value>
        </filters>
        <label>US Challenges</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>US_Challenges1</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>FieloCH__Challenge__c</columns>
        <columns>FieloCH__IsActive__c</columns>
        <columns>F_PRM_Country__c</columns>
        <columns>PartnerProgram__c</columns>
        <columns>F_PRM_ChallengeFilter__c</columns>
        <columns>F_PRM_MenuProgram__c</columns>
        <columns>FieloCH__Subscription__c</columns>
        <columns>FieloCH__Mode__c</columns>
        <columns>FieloCH__Category__c</columns>
        <columns>FieloCH__AcomplishAction__c</columns>
        <columns>FieloCH__CompetitionType__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>FieloCH__InitialDate__c</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>OKKEN,BLOKSET,SYSTEM</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>NEX,SM6,MCSET,MOTORPACT,BIOSCO,RM6,PREMSET,PIX</value>
        </filters>
        <label>LV&amp;MV Challenges</label>
        <language>en_US</language>
        <sharedTo>
            <group>PRM_LV_MV</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Challenges</pluralLabel>
    <recordTypes>
        <fullName>FieloCH__Series</fullName>
        <active>false</active>
        <label>Series</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloCH__Single</fullName>
        <active>true</active>
        <label>Single</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <sharingReasons>
        <fullName>PRMCountrySharing__c</fullName>
        <label>PRMCountrySharing</label>
    </sharingReasons>
    <validationRules>
        <fullName>F_PRM_CantActivateEmptyChallenge</fullName>
        <active>true</active>
        <description>Can&apos;t activate a Challenge without having a Mission and a Challenge Reward configured</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 
&amp;&amp; 
(
FieloCH__IsActive__c &amp;&amp; (FieloCH__MissionsCounter__c == 0 || FieloCH__RewardCounter__c == 0)
)</errorConditionFormula>
        <errorMessage>Can&apos;t activate a Challenge without having a Mission and a Challenge Reward configured</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>F_PRM_ChalleFilterFilledWithPCountryCode</fullName>
        <active>true</active>
        <description>Challenge Filter must begin with P-{countrycode} in case of PRM records or R-AE-Rewards in case of Rewards Program records</description>
        <errorConditionFormula>NOT($User.BypassVR__c) 

&amp;&amp; 

NOT(BEGINS(F_PRM_ChallengeFilter__c , &quot;TMPL-&quot; )) 

&amp;&amp; 

(ISNEW() || ISCHANGED(F_PRM_ChallengeFilter__c ) || ISCHANGED(F_PRM_Country__c )) 

&amp;&amp; 
 
NOT(BEGINS(F_PRM_ChallengeFilter__c , &quot;P-&quot;+F_PRM_Country__r.CountryCode__c ))</errorConditionFormula>
        <errorDisplayField>F_PRM_ChallengeFilter__c</errorDisplayField>
        <errorMessage>Challenge Filter must begin with P-{countrycode} in case of PRM records or R-AE-Rewards in case of Rewards Program records</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Active_Challenge</fullName>
        <active>false</active>
        <errorConditionFormula>FieloCH__IsActive__c &amp;&amp;  (FieloCH__MissionsCounter__c == 0 || FieloCH__RewardCounter__c == 0)</errorConditionFormula>
        <errorMessage>Can&apos;t Activate a Challenge without a mission or reward</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Competition_Type_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( FieloCH__CompetitionType__c , &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Competition Type is Required when Mode is selected</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Challenge_Competition</fullName>
        <active>true</active>
        <description>If the competition type is modified, check that is has no missions associated.</description>
        <errorConditionFormula>IF( AND(FieloCH__MissionsCounter__c &gt; 0,   ISCHANGED(FieloCH__CompetitionType__c) ), true, false)</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Cannot change Competition Type if already have missions.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Challenge_Mode</fullName>
        <active>true</active>
        <description>Check if it has missions or members associated in order to let the user modify the challenge.</description>
        <errorConditionFormula>IF( AND( FieloCH__MissionsCounter__c &gt; 0, ISCHANGED( FieloCH__Mode__c ) ), true, false)</errorConditionFormula>
        <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
        <errorMessage>Cannot change Mode if already have missions or community associated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Edit_Competition_Type</fullName>
        <active>true</active>
        <description>Check if it has rewards associated.</description>
        <errorConditionFormula>AND(If( FieloCH__RewardCounter__c &gt; 0, true, false ) , ISCHANGED(FieloCH__CompetitionType__c))</errorConditionFormula>
        <errorDisplayField>FieloCH__CompetitionType__c</errorDisplayField>
        <errorMessage>Cannot modified Competition Type if you had associated rewards. Go to &quot;Manage Rewards&quot;  and delete them first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Final_Date_After_Initial_Date</fullName>
        <active>true</active>
        <errorConditionFormula>FieloCH__InitialDate__c &gt;  FieloCH__FinalDate__c</errorConditionFormula>
        <errorMessage>Initial Date must be before Final Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FieloCH__Mode_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL(FieloCH__Mode__c, &apos;&apos;)</errorConditionFormula>
        <errorDisplayField>FieloCH__Mode__c</errorDisplayField>
        <errorMessage>Mode must be selected</errorMessage>
    </validationRules>
</CustomObject>